GDaemonFileEnumerator: Only listen to messages one connection

There is no need to listen to messages on other connections than
the one we sent the request on. In fact, doing so is bad as it can cause
locking issues as per bug 708721.

https://bugzilla.gnome.org/show_bug.cgi?id=708744